First version of the MyLocationManager and LocationService
Description of the purposes of the LocationService is in the Issue #6, LocationManager is in the Issue #8

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -32,6 +32,8 @@
             android:name=".SettingsActivity"
             android:theme="@style/SettingsTheme" >
         </activity>
+
+        <service android:name=".LocationService" />
     </application>
 
 </manifest>
